[tool.poetry]
name = "chain-bot"
version = "0.1.0"
description = ""
authors = ["Oriojas <oscarriojas@gmail.com>"]
readme = "README.md"
packages = [{include = "chain_bot"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
rasa = "^3.5.6"
openai = "^0.27.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
