[tool.poetry]
name = "chain-bot"
version = "0.1.0"
description = ""
authors = ["oscar50 <oscar@whaleandjaguar.co>"]
readme = "README.md"
packages = [{include = "chain_bot"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
rasa = "3.4.0"
openai = "^0.27.6"
websockets = "10.0"
networkx = "2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

